--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -68,7 +68,7 @@
 
        <!--Navigation Bar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-           <a class="navbar-brand" href="https://mcland-ntu.github.io/Hair-stylist-career/"> 
+           <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/"> 
               <img src="images/Hair Stylist Career 8a.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
            </a> 
 
@@ -84,11 +84,11 @@
            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                <ul class="navbar-nav">
                    <li class="nav-item active">
-                       <a class="nav-link" href="https://mcland-ntu.github.io/Hair-stylist-career/index.html">Home <span class="sr-only">(current) </span> </a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/index.html">Home <span class="sr-only">(current) </span> </a>
                    </li>
 
                    <li class="nav-item">
-                       <a class="nav-link" href="https://mcland-ntu.github.io/Hair-stylist-career/tools.html" >Tools</a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>
                    </li>
 
                    <li class="nav-item dropdown">
@@ -96,8 +96,8 @@
                           Men cutting
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                           <a class="dropdown-item" href="https://mcland-ntu.github.io/Hair-stylist-career/men-smart.html" > Smart cut</a>
-                           <a class="dropdown-item" href="https://mcland-ntu.github.io/Hair-stylist-career/men-short.html" > Short cut </a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" > Smart cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" > Short cut </a>
                        </div>
 
                    </li>
@@ -107,15 +107,15 @@
                           Women cutting
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                           <a class="dropdown-item" href="https://mcland-ntu.github.io/Hair-stylist-career/women-short.html" > Short hairs</a>
-                           <a class="dropdown-item" href="https://mcland-ntu.github.io/Hair-stylist-career/women-long.html" > Long hairs</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" > Short hairs</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" > Long hairs</a>
                        </div>
 
                    </li>		       
 		       
 
                    <li class="nav-item">
-                       <a href="https://mcland-ntu.github.io/Hair-stylist-career/contact.html" class="nav-link">Contact Us</a>
+                       <a href="https://aspiring-careers.github.io/hair-stylist-career/contact.html" class="nav-link">Contact Us</a>
                    </li>
 
                </ul>
