--- a/hair-stylist-career/contact.html
+++ b/hair-stylist-career/contact.html
@@ -142,7 +142,7 @@
 		 <br>
                  <input type="text" name="name" placeholder="Name" required>
 	         <br>
-		      <input type="hidden" name="_next" value="https:///mcland-ntu.github.io/thank-you.html">
+		      <input type="hidden" name="_next" value="https://aspiring-careers.github.io/hair-stylist-career/thank-you.html">
 		 <label>email</label>
 		 <br>
                  <input type="email" name="email" placeholder="Email Address" required>
