--- a/hair-stylist-career/contact.html
+++ b/hair-stylist-career/contact.html
@@ -137,7 +137,7 @@
           <h3 class="wsite-content-title">If you have any comments please fill in the form below:<br /></h3>
 	       
               <form action="https://formsubmit.co/aspiringcareers8@gmail.com" method="POST">
-		      <input type="hidden" name="_subject" value="Boolean Network Landscape Comment submission">
+		      <input type="hidden" name="_subject" value="Aspiring Careers Comment submission">
 		 <label>Name</label> 
 		 <br>
                  <input type="text" name="name" placeholder="Name" required>
@@ -150,7 +150,7 @@
 		      <br>
 		      <label>Comment</label>
 		      <br>
-		       <input type="hidden" name="_autoresponse" value="Thank you for submitting your comment! Best wishes from Ket">
+		       <input type="hidden" name="_autoresponse" value="Thank you for submitting your comment! Best wishes">
 		      <input type="text" maxlength="300" name="comment" placeholder="Write your comment here" required>
 
 		      <br>
