--- a/hair-stylist-career/men-smart.html
+++ b/hair-stylist-career/men-smart.html
@@ -155,7 +155,7 @@ Chelsea Welechenko.</h4>
           <br>
 
  <h4>We recommend you to learn from a video tutorial by a professional hair stylist Norman. Norman is a very good teacher and he kindly shares with us how to begin cutting hairs.</h4>
-	<p>  In this video Norman explain and show you how to start cutting for men short that looks smart. 
+	<p>  In this video Norman explains and shows you how to start cutting for men short that looks smart. 
 	    
        <h5>Norman tutorial men's hair cut for beginner</h5>
        <div class="embed-responsive embed-responsive-16by9">
