--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -131,7 +131,8 @@
 
        <h4>To cut hairs for others is a skills that can be learned by following the simple step-by-step instructions given by a teacher</h4>
        
-       <p> In this website we provide information to you to start learning to cut hairs. You can learn from teachers we recommended to you. 
+       <p> In this website we provide information to you to start learning to cut hairs. You can learn from the teachers we recommended to you that include cutting hairs for men and women. 
+	   Of course you can also apply the cutting skills to cut hairs for children as well.
 	   These teachers in their video tutorials provide you with a step-by-step easy to follow along techniques to cut hairs. 
 	   Below is a picture of a hair stylist cutting hairs. We hope you can read and watch the video tutorials by the teachers. And then start practising what you learn. 
 	   If you have any comments or feedback please let us know. </p>
