--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -149,7 +149,7 @@
   
 
           <div class="embed-responsive embed-responsive-21by9" style="background-color: #eee;">	
-               <a class="embed-responsive-item" href="https://info.flagcounter.com/x6zA"><img src="https://s01.flagcounter.com/count2/x6zA/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_80/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>   
+               <a href="https://info.flagcounter.com/x6zA"><img src="https://s01.flagcounter.com/count2/x6zA/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_80/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>   
 	       
              
           </div>
