--- a/hair-stylist-career/thank-you.html
+++ b/hair-stylist-career/thank-you.html
@@ -132,7 +132,7 @@
 
   
 
-          <div classclass="w-100 mb-2 mx-auto" style="background-color: #eee;">	
+          <div class="embed-responsive" style="background-color: #eee;">	
                <a href="https://info.flagcounter.com/x6zA"><img src="https://s01.flagcounter.com/count2/x6zA/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_80/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>   
 	       
              
