--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -19,7 +19,7 @@
       <meta name="keywords" content="A website, for providing information, you, to be a hair stylist">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      
+      <meta name="google-site-verification" content="6qhCMeHrfQw2Ep_IL2Zr9XXJeXDDsWw0Br3ly0qWfaI" />
       <meta name="msvalidate.01" content="7FC0FB02B0CCDB3C9B8AB3BDE6C6C5E4">
 
     <!-- Bootstrap CSS -->
