--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -141,7 +141,9 @@
        6. A few hair clips for clipping hairs to separate the hairs into sections 
 	<br>
        7. An ultra fine mist water sprayer bottle  
+	<br>
 	You can buy these tools in a supermarket or in Amazon.com or any electronic store near where you live.
+	When you cut hairs with scissors please be careful not to cut your fingers or customer ears. However, cutting hairs with a clipper or trimmer will be safer. 
 	<br>
 	    <br>
 	
