--- a/hair-stylist-career/men-smart.html
+++ b/hair-stylist-career/men-smart.html
@@ -16,7 +16,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
       <meta name="description" content="A website for providing information to you to be a hair stylist">
-      <meta name="keywords" content="A website, for providing information, you, to be a hair stylist">
+      <meta name="keywords" content="men smart hair cut, men cut, short hair, hair stylist, cut hairs, clippers, cut hair with scissors">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="google-site-verification" content="6qhCMeHrfQw2Ep_IL2Zr9XXJeXDDsWw0Br3ly0qWfaI" />
