--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -15,8 +15,8 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="A website for providing information to you to be a hair stylist">
-      <meta name="keywords" content="A website, for providing information, you, to be a hair stylist">
+      <meta name="description" content="A website for providing information to you to be a hair stylist aspiring career">
+      <meta name="keywords" content="hair stylist career, aspiring career, women long hair cut, pixie cut, men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="google-site-verification" content="6qhCMeHrfQw2Ep_IL2Zr9XXJeXDDsWw0Br3ly0qWfaI" />
