--- a/hair-stylist-career/contact.html
+++ b/hair-stylist-career/contact.html
@@ -15,8 +15,8 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="A website for providing information to you to be a hair stylist">
-      <meta name="keywords" content="contact, women cut, hair stylist career, men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
+      <meta name="description" content="Contact information of a website for providing information to you to be a hair stylist">
+      <meta name="keywords" content="email, contact, women cut, hair stylist career, men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="google-site-verification" content="6qhCMeHrfQw2Ep_IL2Zr9XXJeXDDsWw0Br3ly0qWfaI" />
@@ -151,7 +151,7 @@
 		      <label>Comment</label>
 		      <br>
 		       <input type="hidden" name="_autoresponse" value="Thank you for submitting your comment! Best wishes">
-		      <input type="text" maxlength="300" name="comment" placeholder="Write your comment here" required>
+		      <input type="text" size="50" maxlength="300" name="comment" placeholder="Write your comment here" required>
 
 		      <br>
 		      <br>
