--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -142,7 +142,8 @@
              <img src="images/haircut-action.jpg" alt="action of cutting hairs" align="middle" class="img-fluid" /> 
        </div>
    
-
+      <h4>To cut hairs for others is a skills that can be learned by following the instructions given by a teacher. In this section, we introduce to you a summary of the step 
+	  by Norman to cut hairs for women.  
 
 
 
