--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -142,7 +142,7 @@
              <img src="images/haircut-action.jpg" alt="action of cutting hairs" align="middle" class="img-fluid" /> 
        </div>
    
-      <h4>In this section, we introduce to you a summary of the key steps by the teacher Norman to cut hairs for women.  
+      <h4>In this section, we introduce to you a summary of the key steps by the teacher Norman to cut hairs for women.  </h4>
 
 
 
