--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -143,8 +143,15 @@
        </div>
    
       <h4>In this section, we introduce to you a summary of the key steps by the teacher Norman to cut hairs for women.  </h4>
+     <br>
 
-
+	    <p>In general, all hair cuts have the similar steps to complete the task of cutting hairs. Norman is a professional hair stylist and he is a very good teacher as well.
+	       He explains and shows you how to do each of the steps so that you can follow along and learn from him. </p>
+	    <h3>Step 1 Split the hairs into 3 sections with hair clips</h3>
+	    
+                <div class="w-75 mb-2 mx-auto">
+                    <img src="images/haircut-action.jpg" alt="action of cutting hairs" align="middle" class="img-fluid" /> 
+                </div>
 
   
 
