--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -150,7 +150,7 @@
 	    <h3>Step 1 Split the hairs into 3 sections with hair clips</h3>
 	    
                 <div class="w-75 mb-2 mx-auto">
-                    <img src="images/haircut-action.jpg" alt="action of cutting hairs" align="middle" class="img-fluid" /> 
+                    <img src="images/key steps/1d Start cutting Back.jpg" alt="split the hair into sections by using hair clips" align="middle" class="img-fluid" /> 
                 </div>
 
   
