--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -148,10 +148,11 @@
 
 	    <p>In general, all hair cuts have the similar steps to complete the task of cutting hairs. Norman is a professional hair stylist and he is a very good teacher as well.
 	       He explains and shows you how to do each of the steps so that you can follow along and learn from him. </p>
-	    <h3>Step 1 Split the hairs into 3 sections with hair clips</h3>
+	    <h3>Step 1 Split the hairs into 4 sections with hair clips</h3>
 	    
-                <div class="w-75 mb-2 mx-auto">
+                <div class="w-50 mb-2 mx-auto">
                     <img src="images/key steps/1d Start cutting Back.jpg" alt="split the hair into sections by using hair clips" align="middle" class="img-fluid" /> 
+		    <br> Use hair clips to split the hairs into 4 sections: top, back, left and right.
                 </div>
 
   
