--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -155,7 +155,17 @@
 		    <br> Use hair clips to split the hairs into 4 sections: top, back, left and right.
                 </div>
 
-  
+	    <h5>Step 2 Cut the hairs in the back section</h5>
+	    
+                <div class="w-50 mb-2 mx-auto">
+                    <img src="images/key steps/1e Start cutting Back.jpg" alt="Cut the hairs in the back section" align="middle" class="img-fluid" /> 
+		    <br> Use the plastic comb as a guide to cut hairs.
+                </div>	    
+
+	        <div class="w-50 mb-2 mx-auto">
+                    <img src="images/key steps/1e Start cutting Back.jpg" alt="Cut the hairs in the back section" align="middle" class="img-fluid" /> 
+		    <br> Cut the hairs in the back section with a comb and a pairs of scissors. 
+                </div>	 
 
           <div class="embed-responsive " style="background-color: #eee;">	
                <a href="https://info.flagcounter.com/x6zA"><img src="https://s01.flagcounter.com/count2/x6zA/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_80/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>   
