--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -163,7 +163,7 @@
                 </div>	    
 
 	        <div class="w-50 mb-2 mx-auto">
-                    <img src="images/key steps/1e Start cutting Back.jpg" alt="Cut the hairs in the back section" align="middle" class="img-fluid" /> 
+                    <img src="images/key steps/1f Start cutting Back.jpg" alt="Cut the hairs in the back section" align="middle" class="img-fluid" /> 
 		    <br> Cut the hairs in the back section with a comb and a pairs of scissors. 
                 </div>	 
 
