--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -193,7 +193,7 @@
 
 	        <div class="w-50 mb-2 mx-auto">
                     <img src="images/key steps/3d Back Right.jpg" alt="Cut the hairs in the back right section" align="middle" class="img-fluid" /> 
-		    <br> Cut the hairs in the upper back right section with a pairs of scissors. Use soft cutting means almost same length. 
+		    <br> Cut the hairs in the upper back right section with a pairs of scissors. Use soft cutting means almost same length. Do it the same way for the left side.
                 </div>	
 
 	    
