--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -187,7 +187,7 @@
 	    <h5>Step 4 Cut the hairs in the upper back left and right section</h5>
 	    
                 <div class="w-50 mb-2 mx-auto">
-                    <img src="images/key steps/3b Back Right.jpg" alt="Cut the hairs in the upper back right section" align="middle" class="img-fluid" /> 
+                    <img src="images/key steps/3c Back Right.jpg" alt="Cut the hairs in the upper back right section" align="middle" class="img-fluid" /> 
 		    <br> Comb the hairs and hold it with your fingers.
                 </div>	    
 
