--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -135,7 +135,8 @@
 	   Of course you can also apply the cutting skills to cut hairs for children as well.
 	   These teachers in their video tutorials provide you with a step-by-step easy to follow along techniques to cut hairs. 
 	   Below is a picture of a hair stylist cutting hairs. We hope you can read and watch the video tutorials by the teachers. And then start practising what you have learned from the teachers. 
-	   If you have any comments or feedback please let us know. </p>
+	   At the beginning if you are not sure how to start you can watch a video Tutorial by Chelsea in Men cutting Smart cut and see how you can start learning to cut hairs.
+	   </p>
    
   
        <div class="w-75 mb-2 mx-auto">
@@ -240,7 +241,8 @@
 	    
  <h5>For cutting the top and front parts of the hairs, we direct you to watch the video tutorial by Norman in the Women Cutting Short hairs. </h5>
  <br> The steps taught by Norman is easy to follow. We hope you will watch it a few times and try cutting hairs for others. The more you practice 
-       cutting hairs you will pick up the skills for effective hairs cutting. Enjoy the accomplishment of being able to cut hairs for others.
+       cutting hairs you will pick up the skills for effective hairs cutting. Enjoy the accomplishment of being able to cut hairs for others. 
+       If you have any comments or feedback please let us know. 
 
 	    <br>
 	    <br>
