--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -134,8 +134,9 @@
        <p> In this website we provide information to you to start learning to cut hairs. You can learn from the teachers we recommended to you that include cutting hairs for men and women. 
 	   Of course you can also apply the cutting skills to cut hairs for children as well.
 	   These teachers in their video tutorials provide you with a step-by-step easy to follow along techniques to cut hairs. 
-	   Below is a picture of a hair stylist cutting hairs. We hope you can read and watch the video tutorials by the teachers. And then start practising what you have learned from the teachers. 
-	   At the beginning if you are not sure how to start you can watch a video Tutorial by Chelsea in Men cutting Smart cut and see how you can start learning to cut hairs.
+	   Below is a picture of a hair stylist cutting hairs. At the beginning if you are not sure how to start you can watch a video Tutorial by Chelsea in Men cutting Smart cut and see how you can start learning to cut hairs. 
+	   We hope you can read and watch the video tutorials by the teachers. And then start practising what you have learned from the teachers. 
+	  
 	   </p>
    
   
