--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -134,7 +134,7 @@
        <p> In this website we provide information to you to start learning to cut hairs. You can learn from the teachers we recommended to you that include cutting hairs for men and women. 
 	   Of course you can also apply the cutting skills to cut hairs for children as well.
 	   These teachers in their video tutorials provide you with a step-by-step easy to follow along techniques to cut hairs. 
-	   Below is a picture of a hair stylist cutting hairs. At the beginning if you are not sure how to start you can watch a video Tutorial by Chelsea in Men cutting Smart cut and see how you can start learning to cut hairs. 
+	   Below is a picture of a hair stylist cutting hairs. <b>At the beginning if you are not sure how to start you can watch a video Tutorial by Chelsea in Men cutting Smart cut </b> and see how you can start learning to cut hairs. 
 	   We hope you can read and watch the video tutorials by the teachers. And then start practising what you have learned from the teachers. 
 	  
 	   </p>
@@ -145,7 +145,7 @@
        </div>
       <br>
 	    
-      <h4>In this section, we introduce to you a summary of the key steps by the teacher Norman to cut hairs for women.  </h4>
+      <h4>In this section, <b>we introduce to you a summary of the key steps by the teacher Norman to cut hairs for women.</b>  </h4>
      <br>
 
 	    <p>In general, all hair cuts have the similar steps to complete the task of cutting hairs. Norman is a professional hair stylist and he is a very good teacher as well.
@@ -240,7 +240,7 @@
 		    <br> A picture of the hairs after cutting the back and right side. Then, repeat these 3 steps for cutting the left side. 
                 </div>	
 	    
- <h5>For cutting the top and front parts of the hairs, we direct you to watch the video tutorial by Norman in the Women Cutting Short hairs. </h5>
+ <h5>For cutting the top and front parts of the hairs, <b>we direct you to watch the video tutorial by Norman in the Women Cutting Short hairs. </b> </h5>
  <br> The steps taught by Norman is easy to follow. We hope you will watch it a few times and try cutting hairs for others. The more you practice 
        cutting hairs you will pick up the skills for effective hairs cutting. Enjoy the accomplishment of being able to cut hairs for others. 
        If you have any comments or feedback please let us know. 
