--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -50,7 +50,7 @@
        }
     </style>
 
-    <title>A website for providing information to you to be a hair stylist</title>
+    <title>How to become a hairstylist? A website for providing information to you to be a hair stylist</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
