--- a/hair-stylist-career/contact.html
+++ b/hair-stylist-career/contact.html
@@ -128,9 +128,9 @@
        <h2>Contact </h2>
 
            <br>
-           E-mail: aspiringcareers8@gmail.com
+          <b> E-mail: aspiringcareers8@gmail.com  </b>
        
-             
+       <br>      
 
        <br>
        <div class="w-75 mb-2 mx-auto">
