--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -150,7 +150,7 @@
      <br>
 
 	    <p>In general, all hair cuts have the similar steps to complete the task of cutting hairs. Norman is a professional hair stylist and he is a very good teacher as well.
-	       He explains and shows you how to do each of the steps so that you can follow along and learn from him. </p>
+	       He explains and shows you how to do each of the steps so that you can follow along and learn from him. Before you cut hairs, you should spray the hairs with water using mist water sprayer bottle.</p>
 	    <h5>Step 1 Split the hairs into 4 sections with hair clips</h5>
 	    
                 <div class="w-50 mb-2 mx-auto">
