--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -153,7 +153,7 @@
 
           <br>	    
 
-       <h5>Norman tutorial men's hair cut for beginner</h5>
+       <h5>Norman tutorial women's hair cut for beginner</h5>
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/FY35ft-MGzU?rel=0" allowfullscreen> 
 		     
