--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -163,6 +163,7 @@
           <br>	 	    
 
        <h5>This is another selected Norman tutorial women's short hair cut for beginner</h5>
+	     <br> This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women's hair with scissors.
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/Dl7uO-H542I?rel=0" allowfullscreen> 
 		     
