--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -138,7 +138,7 @@
           <br>	    
 
        <h5>Andrey tutorial women's short hair cut for beginner</h5>
-	<br> This video tutorial by Andrey is without explanation but you can watch and learn the effective techniques for cutting women's hair with scissors.	
+	This video tutorial by Andrey is without explanation but you can watch and learn the effective techniques for cutting women's hair with scissors.	
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/p_f6IAJZXXo?rel=0" allowfullscreen> 
 		     
