--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -155,7 +155,7 @@
           <br>	    
 
        <h5>Norman tutorial women's hair short cut for beginner</h5>
-	<br> This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women's hair with clipper and scissors.
+	 This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women's hair with clipper and scissors.
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/FY35ft-MGzU?rel=0" allowfullscreen> 
 		     
@@ -165,7 +165,7 @@
           <br>	 	    
 
        <h5>This is another selected Norman tutorial women's short hair cut for beginner</h5>
-	     <br> This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women's hair with scissors.
+	      This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women's hair with scissors.
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/Dl7uO-H542I?rel=0" allowfullscreen> 
 		     
