--- a/hair-stylist-career/women-long.html
+++ b/hair-stylist-career/women-long.html
@@ -154,7 +154,7 @@ Alan.</h4>
 	<p>  In this video Norman explains and shows you how to start cutting for women long hairs that looks elegant. 
 	    
        <h5>Norman tutorial women's hair cut for beginner</h5>
-	   This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women's hair with clipper and scissors.
+	   This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women's hair with scissors.
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/T_Fwxsht38g?rel=0" allowfullscreen> 
 		     
