--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -246,7 +246,8 @@
 	    
  <h5>For cutting the top and front parts of the hairs, <b>we direct you to watch the video tutorial by Norman in the <a href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html">Women Cutting Short hairs. </b> </a></h5>
  <br> The steps taught by Norman is easy to follow. We hope you will watch it a few times and try cutting hairs for others. The more you practice 
-       cutting hairs you will pick up the skills for effective hairs cutting. Enjoy the accomplishment of being able to cut hairs for others. 
+       cutting hairs you will pick up the skills for effective hairs cutting. Enjoy the accomplishment of being able to cut hairs for others. Please share this website with your friends and family members who are interested
+	    to learn to cut hairs.
        If you have any comments or feedback please let us know. 
 
 	    <br>
