--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
        }
     </style>
 
-    <title>How to become a hairstylist? A website for providing information to you to be a hair stylist</title>
+    <title>How to become a hair stylist?</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
@@ -127,7 +127,7 @@
     <!--end of navigation bar-->
 
        <br>
-       <h3> How to become a hairstylist? </h3>
+       <h1> How to become a hairstylist? </h1>
        <h4>A website to provide information and introduce you to the teachers that can help you learn to be a hair stylist </h4>
        
        <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding</p>
