--- a/hair-stylist-career/men-short.html
+++ b/hair-stylist-career/men-short.html
@@ -50,7 +50,7 @@
        }
     </style>
 
-    <title>Men short cutting</title>
+    <title>Men short hair cutting</title>
     
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9055657518577401"
      crossorigin="anonymous"></script>
@@ -125,7 +125,7 @@
     <!--end of navigation bar-->
     <br>
 
-       <h4>Men short hairs cut </h4>
+       <h1>Men short hairs cut </h1>
        
        <p>To be a hair stylist as a hobby in your free time or a professsional hair stylist is very rewarding</p>
 
