--- a/hair-stylist-career/contact.html
+++ b/hair-stylist-career/contact.html
@@ -15,7 +15,7 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="Contact information of a website for providing information to you to be a hair stylist">
+      <meta name="description" content="Hair Stylist Career Contact">
       <meta name="keywords" content="email, contact, women cut, hair stylist career, men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -125,7 +125,7 @@
     <!--end of navigation bar-->
 
       <br>
-       <h2>Contact </h2>
+       <h1>Hair Stylist Career Contact </h1>
 
            <br>
           <b> E-mail: aspiringcareers8@gmail.com  </b>
