--- a/hair-stylist-career/thank-you.html
+++ b/hair-stylist-career/thank-you.html
@@ -15,7 +15,7 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="A website for providing information to you to be a hair stylist">
+      <meta name="description" content="Thank you for submitting your comment">
       <meta name="keywords" content="A website, for providing information, you, to be a hair stylist">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -125,7 +125,7 @@
     <!--end of navigation bar-->
 
     <br>
-    <h2>Thank you for submitting your comment! </h2>
+    <h1>Thank you for submitting your comment! </h1>
 
 
 
