--- a/hair-stylist-career/men-smart.html
+++ b/hair-stylist-career/men-smart.html
@@ -146,11 +146,12 @@ Chelsea Welechenko.</h4>
    
 
        <h5>Chelsea tutorial men's hair cut for beginner</h5>
+	    This video tutorial has been viewed by 4.2 millions times after 4 years on YouTube. Many viewers thank Chelsea because they pick up the hair cutting skills from Chelsea's video.
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/g3PRJgSfFuk?rel=0" allowfullscreen> 
 		     
              </iframe>
-	       <br> This video tutorial has been viewed by 4.2 millions times after 4 years on YouTube. Many viewers thank Chelsea because they pick up the hair cutting skills from Chelsea's video.
+	       
        </div>
           <br>
 
