--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -132,7 +132,7 @@
        <h4>To cut hairs for others is a skills that can be learned by following the simple step-by-step instructions given by a teacher</h4>
 
 	<h4>We recommend you to learn from a video tutorial by Andrey Strinadkin.</h4>
-	<p>  In this video Andrey shows you how to start cutting for women short hairs that looks beautiful. 
+	<p>  In this video Andrey shows you how to start cutting for women short hairs that looks beautiful. This method of cutting women short hair is called Pixie hair cut. 
 	    
 
           <br>	    
