--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        <!--Navigation Bar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
            <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/"> 
-              <img src="images/Hair Stylist Career 8a.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
+              <img src="images/Aspiring Careers Logo 1h.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
            </a> 
 
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
