--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
                        <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/index.html">Home <span class="sr-only">(current) </span> </a>
                    </li>
 
+		 <li class="nav-item dropdown">
+                       <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Hair Stylist
+                       </a>
+                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			   <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>    
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" > Men Smart cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" > Men Short cut</a>
+			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" > Short hairs</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" > Long hairs</a>    
+                       </div>
+
+                   </li>    
+		       
+
                    <li class="nav-item">
                        <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>
                    </li>
