--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                           Hair Stylist
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-			   <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>    
+			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>    
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" > Men Smart cut</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" > Men Short cut</a>
-			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" > Short hairs</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" > Long hairs</a>    
+			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" > Women Short cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" > Women Long cut</a>    
                        </div>
 
                    </li>    
