--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
        <!--Navigation Bar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-           <a class="navbar-brand" href="https://aspiring-careers.github.io/hair-stylist-career/"> 
+           <a class="navbar-brand" href="https://aspiring-careers.github.io/"> 
               <img src="images/Aspiring Careers Logo 1h.jpg" width="68" height="68" alt="Hair stylist career Logo" data-height-percentage="50" /> 
            </a> 
 
@@ -86,7 +86,7 @@
            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                <ul class="navbar-nav">
                    <li class="nav-item active">
-                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/index.html">Home <span class="sr-only">(current) </span> </a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/index.html">Home <span class="sr-only">(current) </span> </a>
                    </li>
 
 		 <li class="nav-item dropdown">
