--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                           Hair Stylist
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/index.html" >HS Introduction</a>      
 			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>    
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" > Men Smart cut</a>
                            <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" > Men Short cut</a>
