--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -126,7 +126,7 @@
       <br>
        <h1>Tools you need to use as a hair stylist </h1>
        
-       There a few tools you should invest and buy in order to start learning to cut hairs.  
+       There a few tools you should invest and buy in order to start learning to cut hairs. The costs for the tools are not expensive and it can be used for a long time.  
        <br>
        1. A pairs of scissors 
         <br>
