--- a/hair-stylist-career/women-long.html
+++ b/hair-stylist-career/women-long.html
@@ -130,7 +130,7 @@
 
        <h4>To cut hairs for others is a skills that can be learned by following the simple step-by-step instructions given by a teacher. We recommend you to learn from a video tutorial by 
 Alan.</h4>
-	<p>  In this video Alan explains and shows you how to start cutting for women long hairs with the same length. First Alan explains to you how to cut the hairs with a pair of scissors and set the length we want. 
+	<p>  In this video Alan explains and shows you how to start cutting for women long hairs with the same length. It was recorded during the pandemic when people were advised to stay at home. First Alan explains to you how to cut the hairs with a pair of scissors and set the length we want. 
 		He demonstrated how he starts with cutting the back, left and right side with a scissors and a comb. 
 		This is an easy to follow steps that enable you to learn the basic and the important skills in cutting women's long hairs. Once you learn this basic skills then you become more confident in cutting hairs. 
 		The steps given by Alan are very direct and easy to follow along. A lot of people who watch this video start to cut hairs for their wifes. We hope you will watch this video a few times
