--- a/hair-stylist-career/men-short.html
+++ b/hair-stylist-career/men-short.html
@@ -152,7 +152,7 @@
           <br>	
    
       <h4>We recommend you to learn from a video tutorial by a professional hair stylist Norman. Norman is a very good teacher and he kindly shares with us how to begin cutting hairs.</h4>
-	<p>  In this video Norman explains and shows you how to start cutting for men short that looks smart. 
+	<p>  In this video Norman explains and shows you how to start cutting for men short that looks smart. Norman has his own <a href="https://www.youtube.com/@norman_hair">Hair Stylist Channel on YouTube</a>, you may watch his videos for more techniques for cutting different hair styles.  
 	    
 
           <br>	    
