--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -187,7 +187,7 @@
 
 	    	<div class="w-50 mb-2 mx-auto">
                     <img src="images/key steps/2f Back top part.jpg" alt="Cut the hairs slanting at about 40 degrees." align="middle" class="img-fluid" /> 
-		    <br> Cut the hairs in slanting at about 40 degrees angle. 
+		    <br> Cut the hairs in slanting at about 40 degrees angle. Use Blunt Hair Cutting technique to cut hair (means usual cut to create a solid, sharp line).  
                 </div>	
 
 	    <h5>Step 4 Cut the hairs in the upper back left and right section</h5>
@@ -199,7 +199,7 @@
 
 	        <div class="w-50 mb-2 mx-auto">
                     <img src="images/key steps/3d Back Right.jpg" alt="Cut the hairs in the back right section" align="middle" class="img-fluid" /> 
-		    <br> Cut the hairs in the upper back right section with a pairs of scissors. Use soft cutting means almost same length. Do it the same way for the left side.
+		    <br> Cut the hairs in the upper back right section with a pairs of scissors. Use Point Cutting (or soft cutting) means almost same length. Do it the same way for the left side.
                 </div>	
 
 	    <h5>Step 5 Cut the hairs in left and right section. There are 3 steps here, step 1 cutting the hairs align to the back.</h5>
