--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -15,7 +15,7 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="A website for providing information to you to be a hair stylist aspiring career">
+      <meta name="description" content="how to become a hair stylist or barber, hair stylist career, hair stylist, website for providing information to you to be a hair stylist">
       <meta name="keywords" content="how to become a hairstylist, hair stylist career, aspiring career, women long hair cut, pixie cut, men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
