--- a/hair-stylist-career/men-short.html
+++ b/hair-stylist-career/men-short.html
@@ -15,7 +15,7 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="Men short hair cutting">
+      <meta name="description" content="Watch video and learn from online teachers, professional hair stylist or barber how to cut men short hair with a pairs of scissors, clippers and trimmer.">
       <meta name="keywords" content="men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
