--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -15,7 +15,7 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="Women short hair cut ">
+      <meta name="description" content="Watch video and learn from online teachers, professional hair stylist or barber how to cut women short hair with a pairs of scissors, clippers and trimmer. ">
       <meta name="keywords" content="women short hair cut, women cut, short hairs, pixie cut, hair stylist, cut hairs, clippers">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
