--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -15,7 +15,7 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="Tools you need to use as a hair stylist">
+      <meta name="description" content="Introduce what tools you need to buy as hair stylist you will use comb, a pairs of scissors, clippers, trimmer, hair clips, thinning shears, and water sprayer.">
       <meta name="keywords" content="tools, a pairs of scissors, hair stylist career, hair stylist, cut hair, clipper">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
