--- a/hair-stylist-career/contact.html
+++ b/hair-stylist-career/contact.html
@@ -15,7 +15,7 @@
     <!-- <meta charset="utf-8"> -->
       <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     
-      <meta name="description" content="Hair Stylist Career Contact">
+      <meta name="description" content="Hair Stylist Career Contact information email, we welcome you to send us feedback, comment for us to improve ourselves. Let us know about your name and email.">
       <meta name="keywords" content="email, contact, women cut, hair stylist career, men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
