--- a/hair-stylist-career/contact.html
+++ b/hair-stylist-career/contact.html
@@ -17,6 +17,10 @@
     
       <meta name="description" content="Hair Stylist Career Contact information email, we welcome you to send us feedback, comment for us to improve ourselves. Let us know about your name and email.">
       <meta name="keywords" content="email, contact, women cut, hair stylist career, men short hair cut, men cut, short hair, hair stylist, cut hair, clipper">
+	  <meta property="og:title" content="Hair Stylist Career Contact information email" />
+          <meta property="og:type" content="article" />
+          <meta property="og:url" content="https://aspiring-careers.github.io/hair-stylist-career/contact.html" />
+          <meta property="og:image" content="https://aspiring-careers.github.io/hair-stylist-career/images/Hair Stylist Career 8a.jpg" />
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="google-site-verification" content="6qhCMeHrfQw2Ep_IL2Zr9XXJeXDDsWw0Br3ly0qWfaI" />
