--- a/hair-stylist-career/men-smart.html
+++ b/hair-stylist-career/men-smart.html
@@ -17,6 +17,10 @@
     
       <meta name="description" content="Watch video and learn from online teachers, professional hair stylist or barber how to cut men smart hair with a pairs of scissors, clippers and trimmer.">
       <meta name="keywords" content="men smart hair cut, men cut, short hair, hair stylist, cut hairs, clippers, cut hair with scissors">
+	  <meta property="og:title" content="How to become a hair stylist? Learn hair cutting from online teachers" />
+          <meta property="og:type" content="article" />
+          <meta property="og:url" content="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" />
+          <meta property="og:image" content="https://aspiring-careers.github.io/hair-stylist-career/images/Hair Stylist Career 8a.jpg" />
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="google-site-verification" content="6qhCMeHrfQw2Ep_IL2Zr9XXJeXDDsWw0Br3ly0qWfaI" />
