--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -17,6 +17,10 @@
     
       <meta name="description" content="Introduce what tools you need to buy as hair stylist you will use comb, a pairs of scissors, clippers, trimmer, hair clips, thinning shears, and water sprayer.">
       <meta name="keywords" content="tools, a pairs of scissors, hair stylist career, hair stylist, cut hair, clipper">
+	  <meta property="og:title" content="Introduce what tools you need to buy as hair stylist" />
+          <meta property="og:type" content="article" />
+          <meta property="og:url" content="https://aspiring-careers.github.io/hair-stylist-career/tools.html" />
+          <meta property="og:image" content="https://aspiring-careers.github.io/hair-stylist-career/images/Hair Stylist Career 8a.jpg" />
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="google-site-verification" content="6qhCMeHrfQw2Ep_IL2Zr9XXJeXDDsWw0Br3ly0qWfaI" />
