--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -20,6 +20,7 @@
 	  <meta property="og:title" content="How to become a hair stylist? Learn hair cutting from online teachers" />
           <meta property="og:type" content="article" />
           <meta property="og:url" content="https://aspiring-careers.github.io/hair-stylist-career/index.html" />
+	  <meta property="og:description" content="How to become a hair stylist or barber, let you learn from online teachers for cutting hair for men, women and children. Learn hair cutting techniques. "/>
           <meta property="og:image" content="https://aspiring-careers.github.io/hair-stylist-career/images/Hair Stylist Career 8a.jpg" />
     
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
