--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -4,6 +4,7 @@
 	  <meta charSet="utf-8" />
 
 	  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	  <link rel="SHORTCUT ICON" href="/favicon.ico">
 	  <title>How to Become a Hair Stylist Learn from Online Teachers with Tips| aspiring-careers.github.io</title>
 	  <meta name="description" content="How to become a hair stylist or barber, let you learn from online teachers for cutting hair for men, women and children. Learn hair cutting techniques. ">
 	  
