--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -9,6 +9,7 @@
 	  <meta name="description" content="How to become a hair stylist or barber, let you learn from online teachers for cutting hair for men, women and children. Learn hair cutting techniques. ">
 	  
           <meta name="robots" content="max-image-preview:large"/>
+	  <link rel="canonical" href="https://aspiring-careers.github.io/hair-stylist-career/" />
           <meta property="og:type" content="article" />
 	  <meta property="og:site_name" content="Hair Stylist Guide"/>
           <meta property="og:url" content="https://aspiring-careers.github.io/hair-stylist-career/index.html" />
