--- a/hair-stylist-career/women-long.html
+++ b/hair-stylist-career/women-long.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	  <link rel="SHORTCUT ICON" href="/favicon.ico">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7K2VSMJTMR"></script>
     <script>
