--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
 	  <meta charSet="utf-8" />
+	   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	  <link rel="SHORTCUT ICON" href="/favicon.ico">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7K2VSMJTMR"></script>
