--- a/hair-stylist-career/tools.html
+++ b/hair-stylist-career/tools.html
@@ -3,7 +3,8 @@
   <head>
 	    <meta charSet="utf-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	    <link rel="SHORTCUT ICON" href="/favicon.ico">
+	   
+	      <link rel="icon" type="image/x-icon" href="https://aspiring-careers.github.io/hair-stylist-career/favicon.ico" />
 	    <title>Tools you need to use as a hair stylist</title>
 	  
     <!-- Google tag (gtag.js) -->
