--- a/hair-stylist-career/men-smart.html
+++ b/hair-stylist-career/men-smart.html
@@ -203,7 +203,7 @@ Chelsea Welechenko.</h4>
 	<p>  In this video Norman explains and shows you how to start cutting for men short that looks smart. 
 	    
        <h5>Norman tutorial men's hair cut for beginner</h5>
-	   This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting men's hair with clipper and scissors.	
+	   This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting men's hair with scissors.	
        <div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mYDG0tpDAHI?rel=0" allowfullscreen> 
 		     
