--- a/hair-stylist-career/women-short.html
+++ b/hair-stylist-career/women-short.html
@@ -179,6 +179,15 @@
        </div>
           <br>	    
 
+       <h5>This is another selected Norman tutorial women's short hair cut or Bob hair cut for beginner</h5>
+	      This video tutorial by Norman is in Chinese but you can watch and learn the effective techniques for cutting women Bob hair with scissors.
+       <div class="embed-responsive embed-responsive-16by9">
+             <iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/Gh0I34kwKNg?rel=0" allowfullscreen> 
+		     
+             </iframe>
+	       
+       </div>
+          <br> 
   
 
           <div class="embed-responsive" style="background-color: #eee;">	
