--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -7,7 +7,7 @@
 	  <link rel="SHORTCUT ICON" href="https://aspiring-careers.github.io/hair-stylist-career/favicon.ico">
 	  
 	  <title>How to Become a Hair Stylist Learn from Online Teachers with Tips| aspiring-careers.github.io</title>
-	  <meta name="description" content="How to become a hair stylist or barber, let you learn from online teachers for cutting hair for men, women and children. Learn hair cutting techniques. ">
+	  <meta name="description" content="How to become a hair stylist or barber, let you learn from online teachers cutting hair for men, women and children. Learn hair cutting techniques. ">
 	  
           <meta name="robots" content="max-image-preview:large"/>
 	  <link rel="canonical" href="https://aspiring-careers.github.io/hair-stylist-career/" />
@@ -19,7 +19,9 @@
 	  <meta property="og:title" content="How to become a hair stylist? Learn hair cutting from online teachers" />
           <meta property="og:image" content="https://aspiring-careers.github.io/hair-stylist-career/images/Hair Stylist Career 8a.jpg" />
 
-	  
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:title" content="How to Become a Hair Stylist Learn from Online Teachers with Tips | aspiring-careers" />
+		<meta name="twitter:description" content="How to become a hair stylist or barber, let you learn from online teachers cutting hair for men, women and children. Learn hair cutting techniques. " />	  
 
     
     <!-- Required meta tags -->
