--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
                           Hair Stylist
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/index.html" >HS Introduction</a>      
-			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>    
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" > Men Smart cut</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" > Men Short cut</a>
-			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" > Women Short cut</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" > Women Long cut</a>    
+			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/index.html" aria-label="Read more about Hair Stylist Career" >HS Introduction</a>      
+			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" aria-label="Read more about tools used by hair stylist">Tools</a>    
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" aria-label="Read more about men haircut smart look"> Men Smart cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" aria-label="Read more about short men haircut"> Men Short cut</a>
+			   <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" aria-label="Read more about short women haircut"> Women Short cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" aria-label="Read more about women long haircut"> Women Long cut</a>    
                        </div>
 
                    </li>    
 		       
 
                    <li class="nav-item">
-                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" >Tools</a>
+                       <a class="nav-link" href="https://aspiring-careers.github.io/hair-stylist-career/tools.html" aria-label="Read more about tools used by hair stylist">Tools</a>
                    </li>
 
                    <li class="nav-item dropdown">
@@ -125,8 +125,8 @@
                           Men cutting
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" > Smart cut</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" > Short cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-smart.html" aria-label="Read more about men haircut smart look"> Smart cut</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/men-short.html" aria-label="Read more about short men haircut"> Short cut</a>
                        </div>
 
                    </li>
@@ -136,15 +136,15 @@
                           Women cutting
                        </a>
                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" > Short hairs</a>
-                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html" > Long hairs</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-short.html" aria-label="Read more about short women haircut"> Short hairs</a>
+                           <a class="dropdown-item" href="https://aspiring-careers.github.io/hair-stylist-career/women-long.html"  aria-label="Read more about women long haircut"> Long hairs</a>
                        </div>
 
                    </li>		       
 		       
 
                    <li class="nav-item">
-                       <a href="https://aspiring-careers.github.io/hair-stylist-career/contact.html" class="nav-link">Contact Us</a>
+                       <a href="https://aspiring-careers.github.io/hair-stylist-career/contact.html" class="nav-link"  aria-label="Read more about contact email">Contact Us</a>
                    </li>
 
                </ul>
