--- a/hair-stylist-career/index.html
+++ b/hair-stylist-career/index.html
@@ -171,7 +171,7 @@
    
   
        <div class="w-75 mb-2 mx-auto">
-             <img src="images/women-short-hair.png" alt="action of cutting hairs" align="middle" class="img-fluid" /> 
+             <img src="images/women-short-hair.png" alt="women with short hair cutting" align="middle" class="img-fluid" /> 
        </div>
       <br>
 	    
